# media-matrix

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: SRS.md  design.md
src/: main.py
src/assets/lang/: en.yaml  uk.yaml
src/core/: logger.py  updater.py  worker_photocleaner.py  worker_photosorter.py  worker_twinfinder.py
src/ui/: components.py  i18n.py  sidebar.py  theme.py  view_photocleaner.py  view_photosorter.py  view_twinfinder.py
tests/: test_logger.py  test_photocleaner.py  test_photosorter.py  test_twinfinder.py  test_ui_smoke.py
