[project]
name = "mediamatrix"
version = "1.0.0"
description = "MediaMatrix — a tool for working with media files"
requires-python = ">=3.11"
dependencies = [
    "flet==0.84.0",
    "httpx>=0.28",
    "hachoir>=3.3",
    "ImageHash>=4.3",
    "numpy>=2.4",
    "opencv-python>=4.13",
    "pillow>=12.2",
    "pillow-heif>=1.3",
    "PyYAML>=6.0",
    "scipy>=1.17",
]

[tool.flet]
product = "MediaMatrix"
org = "com.mykaro"
bundle_id = "com.mykaro.mediamatrix"

[tool.flet.app]
path = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
